--- a/application.yml
+++ b/application.yml
@@ -4,6 +4,7 @@ proxy:
   landing-page: /
   heartbeat-rate: 10000
   heartbeat-timeout: 60000
+  #port: 8080
   port: 8080
   authentication: simple
   admin-groups: archivists
@@ -15,6 +16,13 @@ proxy:
   - name: jarrod.harvey
     password: Welcome1
     groups: archivists
+  - name: bill.mezzetti
+    password: password
+    groups: examiners
+  - name: test.examiner
+    password: password
+    groups: examiners
+ 
   # Example: 'simple' authentication configuration
   docker:
     cert-path: /home/none
@@ -23,7 +31,7 @@ proxy:
   specs:
   - id: RPEAT
     display-name: RecordPoint Export to Archivematica Transfer
-    description: Upload a zip of an export from RecordPoint, and this app will turn it into an Archivematica Transfer
+    description: Upload an export from RecordPoint, and this app will turn it into an Archivematica Transfer
     container-cmd: ["R", "-e", "shiny::runApp('/root/RPEAT')"]
     container-image: rpeat
     container-log-path: ./container-logs
@@ -31,7 +39,30 @@ proxy:
     # docker network create -d bridge --subnet 192.168.0.0/24 --gateway 192.168.0.1 dockernet
     container-network: dockernet
     access-groups: archivists
-    container-volumes: [ "/home/RecordPoint_Transfers:/home/RecordPoint_Transfers" ] 
+    container-volumes: [ "/home/RecordPoint_Transfers:/home/RecordPoint_Transfers", "/mnt/RecordPoint_Exports:/mnt/RecordPoint_Exports"] 
+    # The below container is included only to demonstrate the practice exam tool
+  - id: Practice-Exam
+    display-name: Practice Exam
+    description: A tool that allows an examiner to audit a practice exam
+    container-cmd: ["R", "-e", "shiny::runApp('/root/Practice_Exam_Tool')"]
+    container-image: practiceexam
+    access-groups: examiners
+  - id: upload_archival_scans_to_archivematica
+    display-name: Upload Archival Scans
+    description: Upload scans (digitisations) of collections from the RACS Archives to Archivematica
+    container-cmd: ["R", "-e", "shiny::runApp('/root/upload_archival_scans_to_archivematica')"]
+    container-image: digitisations_and_donations
+    access-groups: archivists
+    container-volumes: [ "/home/Archival_Transfers:/home/Archival_Transfers" ]
+    # container-volumes: [ "/opt/digitisations_and_donations/upload_archival_scans_to_archivematica/Inmagic_Dump:/root/digitisations_and_donations/upload_archival_scans_to_archivematica/Inmagic_Dump" ]
+  - id: upload_donations_to_archivematica
+    display-name: Upload Digital Donations
+    description: Upload digital donations (such as CVs) that have been made to RACS
+    container-cmd: ["R", "-e", "shiny::runApp('/root/upload_donations_to_archivematica')"]
+    container-image: digitisations_and_donations
+    access-groups: archivists
+    container-volumes: [ "/home/Digital_Donations:/home/Digital_Donations" ]
+
 
 logging:
   file:
